desktop/assets/css/desktop.css
/* ... */
.paintsImage {
  width: 96%;
}

.remixPaint {
  position: absolute;
  left: 16px;
  bottom: 33px;
  width: 32px;
  height: 32px;
  z-index: 99;
  display: none;
  cursor: pointer;
}

.remixPaint:hover {
  cursor: pointer;
  opacity: 0.44;
}

.remixGif {
  position: absolute;
  left: 16px;
  width: 32px;
  height: 32px;
  top: 32px;
  z-index: 99;
  display: none;
}

.remixGif:hover {
  cursor: pointer;
  opacity: 0.44;
}

.remixMeme {
  height: 22px;
  width: 22px;
}

.remixMeme:hover {
  cursor: pointer;
  opacity: 0.44;
}

.message {
  position: relative;
}

.geoFlag {
  width: 16px;
  height: 12px;
  padding: 3px;
}

.playSoundIcon {
  width: 15px;
  height: 15px;
  cursor: pointer;
}

.window_bottom_chat {
  font-size: 11px;
  font-weight: bold;
  line-height: 20px;
  /*overflow: hidden;*/
  text-align: center;
  text-shadow: #fff 0 1px 1px;
  /* height: 33px; */
  width: 100%;
  left: 1px;
  right: 1px;
  padding-left: 8px;
  bottom: 23px !important;
}

.youtubeSmartLink img {
  width: 16px;
  height: 16px;
}

.chatMessage {
  font-size: clamp(12px, 0.8vw, 24px);
}

.message {
  font-size: clamp(12px, 0.8vw, 24px);
}

.datetime {
  font-style: italic;
  font-size: clamp(10px, 0.7vw, 24px);
  opacity: 0.77;
}

.canvasBackground {
  /* TODO this !important shouldnt be needed, but i couldn't find which style was overwriting it more specifcally??? */
  cursor: default !important;
}

.help-text {
  margin-left: 25px;
}
.context-menu {
  position: absolute;
}

.context-list {
  list-style: none;
  display: flex;
  flex-direction: column;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 10px 20px rgba(64, 64, 64, 0.596);
  padding: 10px 0;
}

.context-menu-item {
  font: inherit;
  border: 0;
  padding: 10px 30px 10px 15px;
  width: auto;
  display: flex;
  align-items: center;
  position: relative;
  text-decoration: unset;
  color: #000;
  font-weight: 500;
  transition: 0.5s linear;
  -webkit-transition: 0.5s linear;
  -moz-transition: 0.5s linear;
  -ms-transition: 0.5s linear;
  -o-transition: 0.5s linear;
}

.context-menu-item:hover {
  background: #f1f3f7;
  color: #4b00ff;
  }

